--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,44 @@
   <link rel="stylesheet" href="./index.css">
   <script type="module" src="./index.js"></script>
 </head>
-<body>
-<h1 class="text-orange-400 text-6xl bg-red-400">Hola buenas</h1>
-<h2>Hola buenas</h2>
+<body class="bg-white">
+  <header class="bg-[url('/assets/nubes.jpg')] bg-center md:w-auto w-full h-96 bg-cover
+  bg-no-repeat">
+    <!--<img class="w-60 bg-cover " src="assets/nubes.jpg" alt="Foto header">-->
+    <nav class="flex justify-center flex-col items-center w-[92%] mx-auto">
+        <div class="md:static absolute md:min-h-fit min-h-[60vh] left-0 top-[-100%] md:w-auto w-full flex items-center px-5">
+          <ul class="flex md:flex-row flex-col md:items-center md:gap-[4vw] gap-8">
+            <li>
+              <a class="hover:text-orange-500" href="#">Dulces de Japón</a>
+            </li>
+            <li>
+              <a class="hover:text-orange-500" href="#">Dulces de EEUU</a>
+            </li>
+            <li>
+              <a class="hover:text-orange-500" href="#">Dulce de México</a>
+            </li>
+            <li>
+              <a class="hover:text-orange-500" href="#">Dulces de Europa</a>
+            </li>
+            <li>
+              <a class="hover:text-orange-500" href="#">Golosinas</a>
+            </li>
+            <li>
+              <a class="hover:text-orange-500" href="#">Chocolate</a>
+            </li>
+          </ul>
+        </div>
+        <div class="flex flex-row">
+        <div class="flex items-center gap-6">
+          <button class="bg-[#a6c1ee] text-white px-5 py-2 rounded-full hover:bg-pink-300">Log In</button>
+          <button class="bg-[#a6c1ee] text-white px-5 py-2 rounded-full hover:bg-pink-300">Cart</button>
+        </div>""
+        </div>
+        <div class="">
+          <img class="flex flex-col w-48" src="assets/logo-letras.png" alt="Logo">
+        </div>
+      </div>
+    </nav>
+  </header>
 </body>
 </html>
