--- a/src/index.html
+++ b/src/index.html
@@ -4,48 +4,94 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>CandyKoa</title>
+  <link rel="icon" href="assets/logo-letras.png" type="image/x-icon">
   <link rel="stylesheet" href="./index.css">
   <script type="module" src="./index.js"></script>
 </head>
-<body class="bg-white">
+<body class="bg-white w-full">
   <header class="bg-[url('/assets/nubes.jpg')] bg-center md:w-auto w-full h-96 bg-cover
-  bg-no-repeat">
-    <!--<img class="w-60 bg-cover " src="assets/nubes.jpg" alt="Foto header">-->
-    <nav class="flex justify-center flex-col items-center w-[92%] mx-auto">
-        <div class="md:static absolute md:min-h-fit min-h-[60vh] left-0 top-[-100%] md:w-auto w-full flex items-center px-5">
-          <ul class="flex md:flex-row flex-col md:items-center md:gap-[4vw] gap-8">
+  bg-no-repeat object-top">
+      <div>
+      <nav class="flex justify-center flex-row items-center w-[100%] mx-auto">
+        <div class="md:static absolute md:min-h-fit min-h-[60vh] left-0 top-[-100%] md:w-auto w-full flex items-center px-5 font-bold m-3 text-stone-50">
+          <ul class="flex md:flex-row flex-col md:items-center md:gap-[2vw] gap-8">
             <li>
-              <a class="hover:text-orange-500" href="#">Dulces de Japón</a>
+              <div class="flex flex-col items-center">
+                <img class="w-9" src="assets/japan.png">
+                <a class="hover:text-blue-200" href="#">Dulces de Japón</a>
+              </div>
+              </li>
+            <li>
+              <div class="flex flex-col items-center">
+              <img class="w-9" src="assets/japan.png">
+              <a class="hover:text-blue-200" href="#">Dulces de EEUU</a>
+              </div>
             </li>
             <li>
-              <a class="hover:text-orange-500" href="#">Dulces de EEUU</a>
+              <div class="flex flex-col items-center">
+                <img class="w-9" src="assets/japan.png">
+                <a class="hover:text-blue-200" href="#">Dulce de México</a>
+              </div>
             </li>
             <li>
-              <a class="hover:text-orange-500" href="#">Dulce de México</a>
+              <div class="flex flex-col items-center">
+                <img class="w-9" src="assets/japan.png">
+                <a class="hover:text-blue-200" href="#">Dulces de Europa</a>
+              </div>
             </li>
             <li>
-              <a class="hover:text-orange-500" href="#">Dulces de Europa</a>
+              <div class="flex flex-col items-center">
+                <img class="w-9" src="assets/sweets.png">
+                <a class="hover:text-blue-200" href="#">Golosinas</a>
+              </div>
             </li>
             <li>
-              <a class="hover:text-orange-500" href="#">Golosinas</a>
-            </li>
-            <li>
-              <a class="hover:text-orange-500" href="#">Chocolate</a>
+              <div class="flex flex-col items-center">
+                <img class="w-9" src="assets/chocolate.png">
+                <a class="hover:text-blue-200" href="#">Chocolate</a>
+              </div>
             </li>
           </ul>
+          </div>
+          <div class="flex gap-6 text-purple-800">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+            </svg>
+          </div>
+        </nav>
         </div>
-        <div class="flex flex-row">
-        <div class="flex items-center gap-6">
-          <button class="bg-[#a6c1ee] text-white px-5 py-2 rounded-full hover:bg-pink-300">Log In</button>
-          <button class="bg-[#a6c1ee] text-white px-5 py-2 rounded-full hover:bg-pink-300">Cart</button>
-        </div>""
-        </div>
-        <div class="">
-          <img class="flex flex-col w-48" src="assets/logo-letras.png" alt="Logo">
+        <div class="flex flex-col items-center relative top-4">
+          <img class="w-56" src="assets/logo-letras.png" alt="Logo">
         </div>
       </div>
-    </nav>
   </header>
+  <form class="flex flex-row justify-center p-3">
+    <label for="default-search" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
+    <div class="relative">
+        <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+            <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
+        </div>
+        <input type="search" id="default-search" class="block items-center w-80 p-3 pl-10 text-sm text-gray-900 border border-b-pink-700 border-t-transparent border-l-transparent border-r-transparent" placeholder="¡Encuentra tus dulces favoritos!" required>
+    </div>
+</form>
+  <div class="flex flex-row w-full m-16 gap-7">
+      <div class="grid grid-cols-2 gap-4 w-6/12">
+        <img class="col-span-2 rounded-xl" src="assets/chuches (10).jpg" alt="">
+        <img class="rounded-xl" src="assets/chuches (4).jpg" alt="">
+        <img class="rounded-xl" src="assets/chuches (7).jpg" alt="">
+      </div>
+      <div class="flex justify-center items-center">
+        <h1 class="">Hola que tal todo bien</h1>
+      </div>
+    </div>
+  <!--
+  <div>Esto es lo de los alérgenos
+    <div>Texto + iconos</div>
+  </div>-->
 </body>
+<footer></footer>
 </html>
