--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   bg-no-repeat object-top">
       <div>
       <nav class="flex justify-center flex-row items-center w-[100%] mx-auto">
-        <div class="md:static absolute md:min-h-fit min-h-[60vh] left-0 top-[-100%] md:w-auto w-full flex items-center px-5 font-bold m-3 text-stone-50">
+        <div class="md:static absolute md:min-h-fit min-h-[60vh] left-0 top-[-100%] md:w-auto w-full flex items-center px-5 font-bold text-stone-50">
           <ul class="flex md:flex-row flex-col md:items-center md:gap-[2vw] gap-8">
             <li>
               <div class="flex flex-col items-center">
@@ -78,8 +78,8 @@
         <input type="search" id="default-search" class="block items-center w-80 p-3 pl-10 text-sm text-gray-900 border border-b-pink-700 border-t-transparent border-l-transparent border-r-transparent" placeholder="¡Encuentra tus dulces favoritos!" required>
     </div>
 </form>
-  <div class="flex flex-row w-full m-16 gap-7">
-      <div class="grid grid-cols-2 gap-4 w-6/12">
+  <div class="flex flex-row m-16 gap-7">
+      <div class="grid grid-cols-2 gap-4 w-1/2">
         <img class="col-span-2 rounded-xl" src="assets/chuches (10).jpg" alt="">
         <img class="rounded-xl" src="assets/chuches (4).jpg" alt="">
         <img class="rounded-xl" src="assets/chuches (7).jpg" alt="">
