--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <div class="md:static absolute md:min-h-fit min-h-[60vh] left-0 top-[-100%] md:w-auto w-full flex items-center px-5 font-bold text-stone-50">
           <ul class="flex md:flex-row flex-col md:items-center md:gap-[2vw] gap-8">
             <li>
-              <div class="flex flex-col items-center">
+              <div class="flex flex-col items-center m-6">
                 <img class="w-9" src="assets/japan.png">
                 <a class="hover:text-blue-200" href="#">Dulces de Japón</a>
               </div>
@@ -80,18 +80,24 @@
 </form>
   <div class="flex flex-row m-16 gap-7">
       <div class="grid grid-cols-2 gap-4 w-1/2">
-        <img class="col-span-2 rounded-xl" src="assets/chuches (10).jpg" alt="">
-        <img class="rounded-xl" src="assets/chuches (4).jpg" alt="">
-        <img class="rounded-xl" src="assets/chuches (7).jpg" alt="">
+        <img class="col-span-2 rounded-xl object-cover h-96 w-full hover:scale-110 hover:ease-linear duration-300 hover:contrast-125" src="assets/chuches (10).jpg" alt="">
+        <img class="rounded-xl hover:scale-110 hover:ease-linear duration-300 hover:contrast-125" src="assets/chuches (4).jpg" alt="">
+        <img class="rounded-xl hover:scale-110 hover:ease-linear duration-300 hover:contrast-125" src="assets/chuches (7).jpg" alt="">
       </div>
       <div class="flex justify-center items-center">
         <h1 class="">Hola que tal todo bien</h1>
       </div>
     </div>
-  <!--
-  <div>Esto es lo de los alérgenos
-    <div>Texto + iconos</div>
-  </div>-->
+    <div class="bg-blue-100 bg-opacity-60 w-full h-64 flex flex-col justify-center items-center">
+      <h1 class="text-xl"> ¿Tienes algún tipo de alergia o intolerancia? Pensamos en ti. Busca las etiquetas en todos nuestros productos.</h1>
+      <h2 class="text-3xl">Lo primero, eres tú.</h2>
+      <img src="" alt="iconos alergias">
+    </div>
+    <div> <!--Aquí va el carrousel-->
+      <img src="" alt="">
+      <img src="" alt="">
+      <img src="" alt="">
+    </div>
 </body>
 <footer></footer>
 </html>
