Avances en página principal, hemos añadido imágenes y colocado algunos elementos

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="assets/logo-letras.png" type="image/x-icon">
   <link rel="stylesheet" href="./index.css">
   <script type="module" src="./index.js"></script>
+  <script src="https://kit.fontawesome.com/74c7329e57.js" crossorigin="anonymous"></script>
 </head>
 <body class="bg-white w-full">
   <header class="bg-[url('/assets/nubes.jpg')] bg-center md:w-auto w-full h-96 bg-cover
@@ -54,7 +55,7 @@
             </li>
           </ul>
           </div>
-          <div class="flex gap-6 text-purple-800">
+          <div class="md:flex md:gap-6 text-purple-800 md:translate-x-96">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
             </svg>
@@ -78,14 +79,37 @@
         <input type="search" id="default-search" class="block items-center w-80 p-3 pl-10 text-sm text-gray-900 border border-b-pink-700 border-t-transparent border-l-transparent border-r-transparent" placeholder="¡Encuentra tus dulces favoritos!" required>
     </div>
 </form>
+<div class="bg-[url('/assets/chuches(8).jpg')] bg-center md:w-auto w-full h-60 bg-cover
+bg-no-repeat object-top">
+<p>
+  ¡La desconexión que necesitas a sólo un click!
+</p>
+<div class="flex flex-row justify-center items-center">
+<a href="" class="md:bg-pink-300 md:h-7 md:p-1">Quiero verlo!</a>
+<img src="assets/prueba.png" class="w-6" alt="">
+</div>
+</div>
   <div class="flex flex-row m-16 gap-7">
-      <div class="grid grid-cols-2 gap-4 w-1/2">
-        <img class="col-span-2 rounded-xl object-cover h-96 w-full hover:scale-110 hover:ease-linear duration-300 hover:contrast-125" src="assets/chuches (10).jpg" alt="">
-        <img class="rounded-xl hover:scale-110 hover:ease-linear duration-300 hover:contrast-125" src="assets/chuches (4).jpg" alt="">
-        <img class="rounded-xl hover:scale-110 hover:ease-linear duration-300 hover:contrast-125" src="assets/chuches (7).jpg" alt="">
+      <div class="grid grid-cols-2 gap-7 w-1/2">
+        <img class="col-span-2 rounded-xl object-cover h-72 w-full hover:scale-110 hover:ease-linear duration-100 hover:contrast-125" src="assets/chuches (10).jpg" alt="">
+        <img class="rounded-xl hover:scale-110 hover:ease-linear duration-100 hover:contrast-125" src="assets/chuches (4).jpg" alt="">
+        <img class="rounded-xl hover:scale-110 hover:ease-linear duration-100 hover:contrast-125" src="assets/chuches (7).jpg" alt="">
       </div>
       <div class="flex justify-center items-center">
-        <h1 class="">Hola que tal todo bien</h1>
+        <ul>
+          <li class="flex">
+            <img src="assets/japan.png" alt="" class="w-32">
+            <p class="text-justify">Dulces de distintas partes del mundo</p>
+          </li>
+          <li class="flex">
+            <!--<img src="assets/japan.png" alt="" class="w-32">-->
+            <p>Envíos a toda España (Canarias incluidas)</p>
+          </li>
+          <li class="flex">
+            <img src="assets/japan.png" alt="" class="w-32">
+            <p>¡Regístrate y recibe ofertas y descuentos especiales!</p>
+          </li>
+        </ul>
       </div>
     </div>
     <div class="bg-blue-100 bg-opacity-60 w-full h-64 flex flex-col justify-center items-center">
