Header, migas de pan e inicio de info

--- a/src/blop.html
+++ b/src/blop.html
@@ -1,65 +1,129 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./productsDetail.css">
-    <title>Candy Koa - Japón</title>
-  <link rel="icon" href="logo.png" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./index.css">
+  <title>Candy Koa - Japón</title>
+  <link rel="icon" href="assets/logo-letras.png" type="image/x-icon">
 </head>
 
-<body>
-    <header></header>
-    <ul class="migasdepan">
-        <li><a href="index.html">Página principal</a></li>
-        <li><a href="productos.html">Productos</a></li>
-        <li class="lastline">Japón</li>
-    </ul>
-    <div class="container">
-        <div class="top-container">
-        <div class="product">
-            <div class="photo">
-              <img id="photodetails" src="pez.jpg" alt="Blop Chocolate!">
-            </div>
-            <div class="product-card">
-                <h1>Blop Chocolate!</h1>
-                <p class="oneliner">1,75€ (unidad)</p>
-                <div class="tags">
-                    <span>Contiene lactosa</span>
-                    <span>Contiene azúcar</span>
-                </div>
-            </div>
+<body class="bg-white w-full"> <!--Header-->
+  <header class="bg-[url('assets/webp/nubes.webp')] bg-center md:w-auto w-full md:h-96 bg-cover
+    bg-no-repeat object-top">
+    <div class="md:flex justify-end md:gap-6 text-purple-800"> <!--Iconos cliente/carrito-->
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+        class="w-6 h-6">
+        <path stroke-linecap="round" stroke-linejoin="round"
+          d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
+      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+        class="w-6 h-6">
+        <path stroke-linecap="round" stroke-linejoin="round"
+          d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+      </svg>
+    </div>
+    <div class="flex flex-col items-center relative top-4">
+      <img class="md:w-56" src="assets/logo-letras.png" alt="Logo">
+    </div>
+  </header>
+  <form class="flex flex-row justify-center p-3"> <!--Buscador-->
+    <label for="default-search" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
+    <div class="relative">
+      <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+        <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="none" stroke="currentColor"
+          viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+        </svg>
+      </div>
+      <input type="search" id="default-search"
+        class="block items-center w-80 p-3 pl-10 text-sm text-gray-900 border border-b-pink-700 border-t-transparent border-l-transparent border-r-transparent"
+        placeholder="¡Encuentra tus dulces favoritos!" required>
+    </div>
+  </form> <!--Migas de pan-->
+  <nav class="flex px-5 py-3 text-gray-700 " aria-label="Breadcrumb">
+    <ol class="inline-flex items-center space-x-1 md:space-x-3">
+      <li class="inline-flex items-center">
+        <a href="index.html"
+          class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-pink-600 dark:text-gray-400 dark:hover:text-white">
+          <svg aria-hidden="true" class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z">
+            </path>
+          </svg>Página principal
+          </a>
+      </li>
+      <li>
+        <div class="flex items-center">
+          <svg aria-hidden="true" class="w-6 h-6 text-gray-400" fill="currentColor" viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
+              clip-rule="evenodd"></path>
+          </svg>
+          <a href="#"
+            class="ml-1 text-sm font-medium text-gray-700 hover:text-pink-600 md:ml-2 dark:text-gray-400 dark:hover:text-white">Templates</a>
         </div>
-            <div class="cart">
+      </li>
+      <li aria-current="page">
+        <div class="flex items-center">
+          <svg aria-hidden="true" class="w-6 h-6 text-gray-400" fill="currentColor" viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
+              clip-rule="evenodd"></path>
+          </svg>
+          <span class="ml-1 text-sm font-medium text-gray-500 md:ml-2 dark:text-gray-400">Flowbite</span>
+        </div>
+      </li>
+    </ol>
+  </nav>
+  <div class="md:w-full inline-flex justify-center ">
+    <div class="top-container">
+      <div class="max-w-sm bg-white rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <a href="#">
+          <img class="md:w-15" src="assets/webp/products/pez.webp" alt="Blop Chocolate!" />
+        </a>
+        <div class="p-5">
+          <div>
+            <h6>Blop Chocolate!</h6>
+            <br>
+            <p class="precio">1,75€ / unidad.</p>
+            <br>
+            <div class="inline-flex">
+              <img class="md:w-10" src="assets/webp/icons/leche.webp" alt="Lactosa"></img>
+              <img class="md:w-14" src="assets/webp/icons/azucar.webp" alt="Azúcar"></img>
+            </div>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400"></p>
+            <!--<a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                  Read more
+                  <svg aria-hidden="true" class="w-4 h-4 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+              </a>-->
+          </div>
+        </div>
+      </div>
+     <!--<div class="cart">
                 <div class="cart-container">
                 <p class="envios">Envíos a españa</p>
                 <p class="precio">10 €</p>
                 </div>
                 <a href="" class="ir">Ir al carrito</a>
-                <div class="cart-icon"></div> <!-- Esto será un botón o algo asi, hay que decidirlo -->
-            </div>
-        </div>
-
-        <div class="info">
-            <p class="text">Típico pez de chocolate con leche, con un relleno repleto de burbujas que te hará flotar. ¡Ideal para tener un detalle con la persona que más quieres!
-            </p>
-            <div class="ingredients">
-            <h4>Ingredientes</h4>
-            <ul>
-                <li>Azúcar</li>
-                <li>Leche en polvo</li>
-                <li>Manteca de cacao</li>
-                <li>Polvo de cacao</li>
-                <li>Aceite de Palma</li>
-                <li>Espesante (E-754)</li>
-            </ul>
-            </div>
-        </div>
-        <p class="description"></p>
+                <div class="cart-icon"></div> Esto será un botón o algo asi, hay que decidirlo
+            </div>-->
     </div>
-    <footer></footer>
+    <div
+      class="bg-blue-50 flex flex-col items-center shadow md:flex-row md:max-w-xl hover:bg-pink-50 dark:bg-gray-800 dark:hover:bg-gray-700">
+      <div class="flex flex-col justify-between p-4 leading-normal">
+        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Típico pez de chocolate con leche, con un relleno
+          repleto de burbujas que te hará flotar. ¡Ideal para tener un detalle con la persona que más quieres!</p>
+        <p>Ingredientes: Azúcar, Leche en polvo, Manteca de cacao, Polvo de cacao, Aceite de Palma, Espesante (E-754)</p>
+      </div>
+    </div>
+  </div>
+  <footer></footer>
 </body>
 
 </html>
