--- a/src/blop.html
+++ b/src/blop.html
@@ -65,7 +65,7 @@
               clip-rule="evenodd"></path>
           </svg>
           <a href="#"
-            class="ml-1 text-sm font-medium text-gray-700 hover:text-pink-600 md:ml-2 dark:text-gray-400 dark:hover:text-white">Templates</a>
+            class="ml-1 text-sm font-medium text-gray-700 hover:text-pink-600 md:ml-2 dark:text-gray-400 dark:hover:text-white">Japón</a>
         </div>
       </li>
       <li aria-current="page">
@@ -76,14 +76,14 @@
               d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
               clip-rule="evenodd"></path>
           </svg>
-          <span class="ml-1 text-sm font-medium text-gray-500 md:ml-2 dark:text-gray-400">Flowbite</span>
+          <span class="ml-1 text-sm font-medium text-gray-500 md:ml-2 dark:text-gray-400">Producto</span>
         </div>
       </li>
     </ol>
   </nav>
-  <div class="md:w-full inline-flex justify-center ">
-    <div class="top-container">
-      <div class="max-w-sm bg-white rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+  <div class="md:w-full inline-flex justify-center md:gap-5 mb-9 ">
+    <div>
+      <div class="max-w-sm bg-white  dark:border-gray-700">
         <a href="#">
           <img class="md:w-15" src="assets/webp/products/pez.webp" alt="Blop Chocolate!" />
         </a>
@@ -91,9 +91,9 @@
           <div>
             <h6>Blop Chocolate!</h6>
             <br>
-            <p class="precio">1,75€ / unidad.</p>
+            <p>1,75€ / unidad.</p>
             <br>
-            <div class="inline-flex">
+            <div class="inline-flex md:gap-3">
               <img class="md:w-10" src="assets/webp/icons/leche.webp" alt="Lactosa"></img>
               <img class="md:w-14" src="assets/webp/icons/azucar.webp" alt="Azúcar"></img>
             </div>
@@ -115,15 +115,31 @@
             </div>-->
     </div>
     <div
-      class="bg-blue-50 flex flex-col items-center shadow md:flex-row md:max-w-xl hover:bg-pink-50 dark:bg-gray-800 dark:hover:bg-gray-700">
+      class="bg-blue-50 p-4 flex flex-col items-center border-blue-800 md:flex-row md:max-w-xl hover:bg-pink-50 ">
       <div class="flex flex-col justify-between p-4 leading-normal">
-        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Típico pez de chocolate con leche, con un relleno
+        <p class="mb-3 font-normal md:text-2xl text-black">Típico pez de chocolate con leche, con un relleno
           repleto de burbujas que te hará flotar. ¡Ideal para tener un detalle con la persona que más quieres!</p>
-        <p>Ingredientes: Azúcar, Leche en polvo, Manteca de cacao, Polvo de cacao, Aceite de Palma, Espesante (E-754)</p>
+        <br>
+        <p class="mb-3 font-normal text-xl text-black">Ingredientes: Azúcar, Leche en polvo, Manteca de cacao, Polvo de
+          cacao, Aceite de Palma, Espesante (E-754).</p>
+        <br>
+        <p class="mb-3 font-normal text-xl text-black"> Alérgenos: <br>
+          <div class="flex md:gap-3 items-center justify-center md:m-3">
+          <img class="md:w-7" src="assets/webp/icons/leche.webp" alt="Lactosa">Contiene lactosa</img>
+          <img class="md:w-10" src="assets/webp/icons/avellana.webp" alt="Azúcar">Contiene frutos secos.</img>
+        </div>
+        </p>
       </div>
     </div>
+  </div>
+  <div class="bg-[url('assets/webp/joinus2.webp')] md:w-full md:h-96 bg-cover bg-no-repeat object-top flex flex-col items-center justify-center">
+    <h1 class="text-white text-4xl text-center md:w-96  md:ml-96 md:mt-10">¡Síguenos en nuestras redes y no te pierdas las novedades!</h1>
+    <a href="https://www.instagram.com/candykoaofficial/ " target="_blank"> <img class="md:w-12 md:ml-96 md:mt-10" src="assets/webp/icons/instagram (3).png" alt="Instagram"></a>
   </div>
   <footer></footer>
 </body>
 
 </html>
+
+
+
