--- a/src/blop.html
+++ b/src/blop.html
@@ -11,9 +11,9 @@
 </head>
 
 <body class="bg-white w-full"> <!--Header-->
-  <header class="bg-[url('assets/chuches/nubes.jpeg')] bg-center md:w-auto w-full md:h-96 bg-cover
+  <header class="bg-[url('assets/chuches/nubes.jpeg')] bg-center md:w-auto md:w-full h-48 md:h-96 bg-cover
     bg-no-repeat object-top">
-    <div class="md:flex justify-end md:gap-6 text-purple-800"> <!--Iconos cliente/carrito-->
+    <div class="md:flex justify-end md:gap-6 text-purple-800 inline-flex"> <!--Iconos cliente/carrito-->
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
         class="w-6 h-6">
         <path stroke-linecap="round" stroke-linejoin="round"
@@ -24,9 +24,9 @@
         <path stroke-linecap="round" stroke-linejoin="round"
           d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
       </svg>
-    </div>
-    <div class="flex flex-col items-center relative top-4">
-      <img class="md:w-56" src="assets/logo-letras.png" alt="Logo">
+    </div> <!--Logo-header-->
+    <div class="flex flex-col items-center relative top-2 md:top-4">
+      <img class="w-40 md:w-56" src="assets/logo-letras.png" alt="Logo">
     </div>
   </header>
   <form class="flex flex-row justify-center p-3"> <!--Buscador-->
@@ -81,21 +81,22 @@
       </li>
     </ol>
   </nav>
+  <!--Info-producto:img, texto, precio-->
   <div class="md:w-full inline-flex justify-center md:gap-5 mb-9 ">
     <div>
-      <div class="max-w-sm bg-white  dark:border-gray-700">
+      <div class="max-w-sm bg-white dark:border-gray-700">
         <a href="#">
-          <img class="md:w-15" src="assets/productos/pez.jpeg" alt="Blop Chocolate!" />
+          <img class="w-48 md:w-15" src="assets/productos/pez.jpeg" alt="Blop Chocolate!" />
         </a>
-        <div class="p-5">
+        <div class="p-5 text-sm">
           <div>
             <h6>Blop Chocolate!</h6>
             <br>
             <p>1,75€ / unidad.</p>
             <br>
-            <div class="inline-flex md:gap-3">
-              <img class="md:w-10" src="assets/icon/leche.jpeg" alt="Lactosa"></img>
-              <img class="md:w-14" src="assets/icons/azucar.webp" alt="Azúcar"></img>
+            <div class="inline-flex mr-1 md:gap-3">
+              <img class="w-8 md:w-10" src="assets/icon/leche.jpeg" alt="Lactosa"></img>
+              <img class="w-12 md:w-14" src="assets/icons/azucar.webp" alt="Azúcar"></img>
             </div>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400"></p>
             <!--<a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
@@ -105,40 +106,33 @@
           </div>
         </div>
       </div>
-     <!--<div class="cart">
-                <div class="cart-container">
-                <p class="envios">Envíos a españa</p>
-                <p class="precio">10 €</p>
-                </div>
-                <a href="" class="ir">Ir al carrito</a>
-                <div class="cart-icon"></div> Esto será un botón o algo asi, hay que decidirlo
-            </div>-->
     </div>
+    <!--Info-producto: descrip.,ingredientes, alérgemos-->
     <div
-      class="bg-blue-50 p-4 flex flex-col items-center border-blue-800 md:flex-row md:max-w-xl hover:bg-pink-50 ">
+      class="bg-blue-50 md:p-4 flex flex-col items-center border-blue-800 flex-row max-w-xl hover:bg-pink-50">
       <div class="flex flex-col justify-between p-4 leading-normal">
-        <p class="mb-3 font-normal md:text-2xl text-black">Típico pez de chocolate con leche, con un relleno
+        <p class="mb-3 font-normal text-sm md:text-2xl text-black">Típico pez de chocolate con leche, con un relleno
           repleto de burbujas que te hará flotar. ¡Ideal para tener un detalle con la persona que más quieres!</p>
         <br>
-        <p class="mb-3 font-normal text-xl text-black">Ingredientes: Azúcar, Leche en polvo, Manteca de cacao, Polvo de
+        <p class="md:mb-3 font-normal text-sm md:text-xl text-black">Ingredientes: Azúcar, Leche en polvo, Manteca de cacao, Polvo de
           cacao, Aceite de Palma, Espesante (E-754).</p>
         <br>
-        <p class="mb-3 font-normal text-xl text-black"> Alérgenos: <br>
-          <div class="flex md:gap-3 items-center justify-center md:m-3">
-          <img class="md:w-7" src="assets/icon/leche.jpeg" alt="Lactosa">Contiene lactosa</img>
-          <img class="md:w-10" src="assets/icon/avellana.jpeg" alt="Azúcar">Contiene frutos secos.</img>
+        <p class="mb-3 md:font-normal text-sm md:text-xl text-black "> Alérgenos: <br>
+          <div class="flex gap-3 md:gap-3 items-center justify-center md:m-3">
+          <img class="w-7 md:w-7" src="assets/icon/leche.jpeg" alt="Lactosa">Lactosa</img>
+          <img class="w-10 md:w-10" src="assets/icon/avellana.jpeg" alt="Azúcar">Frutos secos.</img>
         </div>
         </p>
       </div>
     </div>
   </div>
-  <div class="bg-[url('assets/chuches/piruleta3.jpeg')] md:w-full md:h-96 bg-cover bg-no-repeat object-top flex flex-col items-center justify-center">
-    <h1 class="text-white text-4xl text-center md:w-96  md:ml-96 md:mt-10">¡Síguenos en nuestras redes y no te pierdas las novedades!</h1>
-    <a href="https://www.instagram.com/candykoaofficial/ " target="_blank"> <img class="md:w-12 md:ml-96 md:mt-10" src="assets/icons/instagram (3).png" alt="Instagram"></a>
+  <div class="bg-[url('assets/chuches/piruleta3.jpeg')] w-full md:w-full h-24 md:h-96 bg-cover bg-no-repeat object-top flex flex-col items-center justify-center">
+    <h1 class="text-white text-sm md:text-4xl text-center md:w-96 ml-48 md:ml-96 md:mt-10">¡Síguenos en nuestras redes y no te pierdas las novedades!</h1>
+    <a href="https://www.instagram.com/candykoaofficial/ " target="_blank"> <img class="w-8 md:w-12 ml-48 md:ml-96 md:mt-10" src="assets/icons/instagram (3).png" alt="Instagram"></a>
   </div>
   <!--Productos recomendados-->
   <div class="flex flex-col justify-center items-center m-5 gap-6 md:m-10">
-    <h1 class="self-start text-sm md:text-lg md:text-pink-800 font-bold">Productos recomendados</h1>
+    <h1 class="self-start text-sm md:text-lg text-pink-800 font-bold">Productos recomendados</h1>
     <div class="flex flex-row gap-7 md:gap-10 md:h-64 md:mt-5 mb-10">
       <div class="flex flex-col md:flex-row md:gap-9 gap-3">
       <div class="flex flex-col md:hover:scale-110">
@@ -168,17 +162,17 @@
 </div>
   <!--footer con redes-->
   <footer class="p-4 bg-blue-200 bg-opacity-40 sm:p-6">
-    <div class="md:flex md:justify-between">
-        <div class="mb-6 md:mb-0">
-            <a href="index.html" class="flex items-center">
-                <img src="assets/logo-letras.png" class="h-32 mr-3" alt="Logo CandyKoa"/>
+    <div class="md:flex md:justify-between text-sm">
+        <div class="mb-3 md:mb-0">
+            <a href="index.html" class="flex items-center justify-center">
+                <img src="assets/logo-letras.png" class="h-32 md:mr-3" alt="Logo CandyKoa"/>
             </a>
         </div>
-        <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
+        <div class="grid grid-cols-2 gap-4 sm:gap-6 sm:grid-cols-3">
             <div>
-                <h2 class="mb-6 text-sm font-semibold text-blue-400 uppercase">Sobre nosotros</h2>
+                <h2 class="mb-3 md:mb-6 text-sm font-semibold text-blue-400 uppercase">Sobre nosotros</h2>
                 <ul class="">
-                    <li class="mb-4">
+                    <li class="mb-2 md:mb-4">
                         <a href="#" class="hover:underline">Quiénes somos</a>
                     </li>
                     <li>
@@ -187,9 +181,9 @@
                 </ul>
             </div>
             <div>
-                <h2 class="mb-6 text-sm font-semibold text-blue-400 uppercase">Síguenos</h2>
+                <h2 class="mb-3 md:mb-6 text-sm font-semibold text-blue-400 uppercase">Síguenos</h2>
                 <ul class="">
-                    <li class="mb-4">
+                    <li class="mb-2 md:mb-4">
                         <a href="https://www.instagram.com/candykoaofficial/" class="hover:underline ">Instagram</a>
                     </li>
                     <li>
@@ -197,10 +191,10 @@
                     </li>
                 </ul>
             </div>
-            <div>
-                <h2 class="mb-6 text-sm font-semibold text-blue-400 uppercase">Legal</h2>
+            <div class="flex flex-col justify-center">
+                <h2 class="mb-3 md:mb-6 text-sm font-semibold text-blue-400 uppercase">Legal</h2>
                 <ul class="">
-                    <li class="mb-4">
+                    <li class="mb-2 md:mb-4">
                         <a href="#" class="hover:underline">Política de privacidad</a>
                     </li>
                     <li>
