--- a/src/blop.html
+++ b/src/blop.html
@@ -90,8 +90,7 @@
   <!--Padre de producto-->
   <div class="sm:w-full md:w-full flex-col items-center inline-flex justify-center md:gap-5 mb-9 ">
     <!--Padre de foto/precio-->
-    <div
-      class="w-full flex flex-col md:flex-row items-center border-blue-800 flex-row max-w-xl hover:bg-pink-50 gap-5">
+    <div class="w-full flex flex-col md:flex-row items-center border-blue-800 flex-row max-w-xl gap-5">
       <div class="w-auto md:w-full bg-transparent items-center">
         <img class="w-56 md:w-auto" src="assets/productos/pez.jpeg" alt="Blop Chocolate!" />
       </div>
@@ -109,7 +108,7 @@
     <div>
       <div
         class="bg-blue-50 w-auto md:p-4 flex flex-col items-center border-blue-800 flex-row max-w-xl hover:bg-pink-50 gap-5">
-        <div class="flex flex-col justify-between p-4 leading-normal">
+        <div class="flex flex-col justify-between p-4 leading-normal text-justify">
           <p class="mb-3 font-normal text-sm md:text-2xl text-black">Típico pez de chocolate con leche, con un relleno
             repleto de burbujas que te hará flotar. ¡Ideal para tener un detalle con la persona que más quieres!</p>
           <br>
@@ -130,10 +129,13 @@
   <!--Anuncio novedades redes-->
   <div
     class="bg-[url('assets/chuches/piruleta3.jpeg')] w-auto lg:w-full h-24 md:h-48 lg:h-88 bg-cover bg-no-repeat object-top flex flex-col items-center justify-center">
-    <h1 class="text-white text-xs sm:text-sm md:text-xl lg:text-4xl text-center md:w-72 lg:w-96 ml-48 md:ml-88 lg:ml-96 mr-1 lg:mt-3 ">¡Síguenos en nuestras
+    <h1
+      class="text-white text-xs sm:text-sm md:text-xl lg:text-4xl text-center md:w-72 lg:w-96 ml-48 md:ml-88 lg:ml-96 mr-1 lg:mt-3 ">
+      ¡Síguenos en nuestras
       redes y no te pierdas las novedades!</h1>
     <a href="https://www.instagram.com/candykoaofficial/ " target="_blank">
-      <img class="w-8 sm:w-8 md:w-10 ml-48 md:ml-48 lg:ml-96 lg:mt-1" src="assets/icons/instagram (3).png" alt="Instagram"></a>
+      <img class="w-8 sm:w-8 md:w-10 ml-48 md:ml-48 lg:ml-96 lg:mt-1" src="assets/icons/instagram (3).png"
+        alt="Instagram"></a>
   </div>
   <!--Productos recomendados-->
   <div class="flex flex-col justify-center items-center gap-6">
@@ -144,114 +146,121 @@
         <!--Producto 1-->
         <div
           class="flex flex-row lg:flex-col gap-2 border-1 border-gray-100 rounded-lg shadow-lg lg:shadow-xl lg:w-60 lg:h-72 lg:hover:scale-110 md:hover:scale-110 md:hover:ease-linear duration-150 ease-in">
-          <img class="w-20 h-20 lg:w-full lg:h-48 rounded-l-lg lg:rounded-t-lg lg:rounded-bl-none"
-            src="assets/chuches/chuches-10.jpeg" alt="">
-          <div class="flex flex-col lg:p-4 gap-2 text-sm md:text-xl">
-            <h1><a class="font-bold" href="">Lingoli</a></h1>
-            <h3 class="font-semibold">0,75€/ud
-            </h3>
-          </div>
+          <a href="bluedreams.html"><img
+              class="w-20 h-20 lg:w-full lg:h-48 rounded-l-lg lg:rounded-t-lg lg:rounded-bl-none"
+              src="assets/productos/bluedreams.jpeg" alt="BlueDreams">
+            <div class="flex flex-col lg:p-4 gap-2 text-sm md:text-xl">
+              <h1 class="font-semibold">Blue Dreams</h1>
+              <h3 class="font-semibold">1.50€/pack
+              </h3>
+            </div>
+          </a>
         </div>
         <!--Producto 2-->
         <div
           class="flex flex-row lg:flex-col gap-2 border-1 border-gray-100 rounded-lg shadow-lg lg:shadow-xl lg:w-60 lg:h-72 lg:hover:scale-110 md:hover:scale-110 md:hover:ease-linear duration-150 ease-in">
-          <img class="w-20 h-20 lg:w-full lg:h-48 rounded-l-lg lg:rounded-t-lg lg:rounded-bl-none"
-            src="assets/chuches/chuches-8.jpeg" alt="">
-          <div class="flex flex-col lg:p-4 gap-2 text-sm md:text-xl">
-            <h1><a class="font-bold" href="">Lingoli</a></h1>
-            <h3 class="font-semibold">0,75€/ud
-            </h3>
-          </div>
+          <a href="hichew.html"><img class="w-20 h-20 lg:w-full lg:h-48 rounded-l-lg lg:rounded-t-lg lg:rounded-bl-none"
+              src="assets/productos/chewchew.jpeg" alt="HiChew">
+            <div class="flex flex-col lg:p-4 gap-2 text-sm md:text-xl">
+              <h1 class="font-bold">Hi-Chew</h1>
+              <h3 class="font-semibold">3.50€/pack
+              </h3>
+            </div>
+          </a>
         </div>
       </div>
       <div class="flex flex-col md:flex-col lg:flex-row md:gap-9 gap-3"> <!--2 últimos-->
         <!--Producto 3-->
+
         <div
           class="flex flex-row lg:flex-col gap-2 border-1 border-gray-100 rounded-lg shadow-lg lg:shadow-xl lg:w-60 lg:h-72 lg:hover:scale-110 md:hover:scale-110 md:hover:ease-linear duration-150 ease-in">
-          <img class="w-20 h-20 lg:w-full lg:h-48 rounded-l-lg lg:rounded-t-lg lg:rounded-bl-none"
-            src="assets/chuches/chuches-10.jpeg" alt="">
-          <div class="flex flex-col lg:p-4 gap-2 text-sm md:text-xl">
-            <h1><a class="font-bold" href="">Lingoli</a></h1>
-            <h3 class="font-semibold">0,75€/ud
-            </h3>
-          </div>
+          <a href="zenhoucolors.html"><img class="w-20 h-20 lg:w-full lg:h-48 rounded-l-lg lg:rounded-t-lg lg:rounded-bl-none"
+              src="assets/productos/zenhou.jpeg" alt="Zenhou">
+            <div class="flex flex-col lg:p-4 gap-2 text-sm md:text-xl">
+              <h1 class="font-bold">Zenhou</h1>
+              <h3 class="font-semibold">2.50€/pack
+              </h3>
+            </div>
+          </a>
         </div>
-        <!--Producto 4-->
-        <div
+      </div>
+      <!--Producto 4-->
+      <div
           class="flex flex-row lg:flex-col gap-2 border-1 border-gray-100 rounded-lg shadow-lg lg:shadow-xl lg:w-60 lg:h-72 lg:hover:scale-110 md:hover:scale-110 md:hover:ease-linear duration-150 ease-in">
-          <img class="w-20 h-20 lg:w-full lg:h-48 rounded-l-lg lg:rounded-t-lg lg:rounded-bl-none"
-            src="assets/chuches/chuches-10.jpeg" alt="">
+          <a href="kitkat.html"><img class="w-20 h-20 lg:w-full lg:h-48 rounded-l-lg lg:rounded-t-lg lg:rounded-bl-none"
+            src="assets/productos/kitkat.jpeg" alt="KitKat">
           <div class="flex flex-col lg:p-4 gap-2 text-sm md:text-xl">
-            <h1><a class="font-bold" href="">Lingoli</a></h1>
-            <h3 class="font-semibold">0,75€/ud
+            <h1 class="font-bold">KitKat</h1>
+            <h3 class="font-semibold">5.50€/pack
             </h3>
           </div>
+        </a>
+        </div>
+    </div>
+  </div>
+  <!--footer con redes-->
+  <footer class="w-full p-4 bg-blue-200 bg-opacity-40 ">
+    <div class="md:flex md:justify-between text-sm items-center">
+      <div class="mb-3 md:mb-0">
+        <a href="index.html" class="flex items-center justify-center">
+          <img src="assets/logo-letras.png" class="h-32 md:mr-3" alt="Logo CandyKoa" />
+        </a>
+      </div>
+      <div class="grid grid-cols-2 gap-4 sm:gap-5 sm:grid-cols-3">
+        <div>
+          <h2 class="mb-3 md:mb-6 text-sm font-semibold text-blue-400 uppercase">Sobre nosotros</h2>
+          <ul class="">
+            <li class="mb-2 md:mb-4">
+              <a href="info.html" class="hover:underline">Quiénes somos</a>
+            </li>
+            <li>
+              <a href="listaproductos.html" class="hover:underline">Nuestros productos</a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h2 class="mb-3 md:mb-6 text-sm font-semibold text-blue-400 uppercase">Síguenos</h2>
+          <ul class="">
+            <li class="mb-2 md:mb-4">
+              <a href="https://www.instagram.com/candykoaofficial/" class="hover:underline ">Instagram</a>
+            </li>
+            <li>
+              <a href="https://twitter.com/CandyKoa_" class="hover:underline">Twitter</a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h2 class="mb-3 md:mb-6 text-sm font-semibold text-blue-400 uppercase">Legal</h2>
+          <ul class="">
+            <li class="mb-2 md:mb-4">
+              <a href="#" class="hover:underline">Política de privacidad</a>
+            </li>
+            <li>
+              <a href="#" class="hover:underline">Términos y Condiciones</a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
-    <!--footer con redes-->
-    <footer class="w-full p-4 bg-blue-200 bg-opacity-40 ">
-      <div class="md:flex md:justify-between text-sm items-center">
-        <div class="mb-3 md:mb-0">
-          <a href="index.html" class="flex items-center justify-center">
-            <img src="assets/logo-letras.png" class="h-32 md:mr-3" alt="Logo CandyKoa" />
-          </a>
-        </div>
-        <div class="grid grid-cols-2 gap-4 sm:gap-5 sm:grid-cols-3">
-          <div>
-            <h2 class="mb-3 md:mb-6 text-sm font-semibold text-blue-400 uppercase">Sobre nosotros</h2>
-            <ul class="">
-              <li class="mb-2 md:mb-4">
-                <a href="#" class="hover:underline">Quiénes somos</a>
-              </li>
-              <li>
-                <a href="#" class="hover:underline">Nuestros productos</a>
-              </li>
-            </ul>
-          </div>
-          <div>
-            <h2 class="mb-3 md:mb-6 text-sm font-semibold text-blue-400 uppercase">Síguenos</h2>
-            <ul class="">
-              <li class="mb-2 md:mb-4">
-                <a href="https://www.instagram.com/candykoaofficial/" class="hover:underline ">Instagram</a>
-              </li>
-              <li>
-                <a href="https://twitter.com/CandyKoa_" class="hover:underline">Twitter</a>
-              </li>
-            </ul>
-          </div>
-          <div>
-            <h2 class="mb-3 md:mb-6 text-sm font-semibold text-blue-400 uppercase">Legal</h2>
-            <ul class="">
-              <li class="mb-2 md:mb-4">
-                <a href="#" class="hover:underline">Política de privacidad</a>
-              </li>
-              <li>
-                <a href="#" class="hover:underline">Términos y Condiciones</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+    <hr class="my-6 border-blue-300 sm:mx-auto lg:my-8" />
+    <div class="sm:flex sm:items-center sm:justify-between">
+      <span class="text-sm sm:text-center">© 2023 <a href="index.html" class="hover:underline">CandyKoa™</a>. All
+        Rights Reserved.
+      </span>
+      <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
+        <a href="mailto:candykoaofficial@gmail.com" class="text-white">
+          <img class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" src="assets/icon/gmail1.jpeg" alt="Gmail">
+        </a>
+        <a href="https://www.instagram.com/candykoaofficial/" class="text-white">
+          <img class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" src="assets/icon/instagram2.jpeg"
+            alt="Instagram">
+        </a>
+        <a href="https://twitter.com/CandyKoa_" class="text-white">
+          <img class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" src="assets/icons/twitter2.webp" alt="Instagram">
+        </a>
       </div>
-      <hr class="my-6 border-blue-300 sm:mx-auto lg:my-8" />
-      <div class="sm:flex sm:items-center sm:justify-between">
-        <span class="text-sm sm:text-center">© 2023 <a href="index.html" class="hover:underline">CandyKoa™</a>. All
-          Rights Reserved.
-        </span>
-        <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
-          <a href="mailto:candykoaofficial@gmail.com" class="text-white">
-            <img class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" src="assets/icon/gmail1.jpeg" alt="Gmail">
-          </a>
-          <a href="https://www.instagram.com/candykoaofficial/" class="text-white">
-            <img class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" src="assets/icon/instagram2.jpeg"
-              alt="Instagram">
-          </a>
-          <a href="https://twitter.com/CandyKoa_" class="text-white">
-            <img class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" src="assets/icons/twitter2.webp"
-              alt="Instagram">
-          </a>
-        </div>
-      </div>
-    </footer>
+    </div>
+  </footer>
 </body>
+
 </html>
