Intento de arreglar tarjetas productos y comentario productos recomendados + footer

--- a/src/fizzmatcha.html
+++ b/src/fizzmatcha.html
@@ -123,20 +123,20 @@
       <img class="w-8 sm:w-8 md:w-10 ml-48 md:ml-48 lg:ml-96 lg:mt-1" src="assets/icons/instagram (3).png"
         alt="Instagram"></a>
   </div>
-  <!--Productos recomendados-->
+  <!--Productos recomendados + footer-->
   <div class="flex flex-col justify-center items-center gap-6">
     <h1 class="self-start text-sm md:text-lg text-pink-800 font-bold ml-5 mt-5">Productos recomendados</h1>
     <!--Productos-->
-    <div class="flex flex-row gap-7 md:gap-10 md:h-64 md:mt-5 mb-10">
-      <div class="flex flex-col md:flex-col lg:flex-row md:gap-9 gap-3">
+    <div class="flex flex-row gap-7 md:gap-10 md:h-64 md:mt-5 mb-10 md:mb-12 lg:mb-20">
+      <div class="flex flex-col md:flex-col lg:flex-row md:gap-9 gap-3"> <!--2 primeros-->
         <!--Producto 1-->
         <div
           class="flex flex-row lg:flex-col gap-2 border-1 border-gray-100 rounded-lg shadow-lg lg:shadow-xl lg:w-60 lg:h-72 lg:hover:scale-110 md:hover:scale-110 md:hover:ease-linear duration-150 ease-in">
           <a href="bluedreams.html"><img
               class="w-20 h-20 lg:w-full lg:h-48 rounded-l-lg lg:rounded-t-lg lg:rounded-bl-none"
               src="assets/productos/bluedreams.jpeg" alt="BlueDreams">
-            <div class="flex flex-col lg:p-4 gap-2 text-sm md:text-xl">
-              <h1 class="font-semibold">Blue Dreams</h1>
+            <div class="flex flex-col lg:p-4 gap-2 text-xs md:text-xl">
+              <h1 class="font-bold">Blue Dreams</h1>
               <h3 class="font-semibold">1.50€/pack
               </h3>
             </div>
@@ -148,7 +148,7 @@
           <a href="matchahearts.html"><img class="w-20 h-20 lg:w-full lg:h-48 rounded-l-lg lg:rounded-t-lg lg:rounded-bl-none"
               src="assets/productos/choc3.jpeg" alt="MatchaHearts">
             <div class="flex flex-col lg:p-4 gap-2 text-sm md:text-xl">
-              <h1 class="font-bold">Matcha Heartsw</h1>
+              <h1 class="font-bold">Matcha Hearts</h1>
               <h3 class="font-semibold">3.50€/pack
               </h3>
             </div>
@@ -168,10 +168,9 @@
             </div>
           </a>
         </div>
-      </div>
       <!--Producto 4-->
       <div
-          class="flex flex-row lg:flex-col gap-2 border-1 border-gray-100 rounded-lg shadow-lg lg:shadow-xl lg:w-60 lg:h-72 lg:hover:scale-110 md:hover:scale-110 md:hover:ease-linear duration-150 ease-in">
+        class="flex flex-row lg:flex-col gap-2 border-1 border-gray-100 rounded-lg shadow-lg lg:shadow-xl lg:w-60 lg:h-72 lg:hover:scale-110 md:hover:scale-110 md:hover:ease-linear duration-150 ease-in">
           <a href="kitkat.html"><img class="w-20 h-20 lg:w-full lg:h-48 rounded-l-lg lg:rounded-t-lg lg:rounded-bl-none"
             src="assets/productos/kitkat.jpeg" alt="KitKat">
           <div class="flex flex-col lg:p-4 gap-2 text-sm md:text-xl">
