--- a/src/zenhoucolors.html
+++ b/src/zenhoucolors.html
@@ -127,11 +127,11 @@
       <img class="w-8 sm:w-8 md:w-10 ml-48 md:ml-48 lg:ml-96 lg:mt-1" src="assets/icons/instagram (3).png"
         alt="Instagram"></a>
   </div>
-  <!--Productos recomendados-->
+  <!--Productos recomendados + footer-->
   <div class="flex flex-col justify-center items-center gap-6">
     <h1 class="self-start text-sm md:text-lg text-pink-800 font-bold ml-5 mt-5">Productos recomendados</h1>
     <!--Productos-->
-    <div class="flex flex-row gap-7 md:gap-10 md:h-64 md:mt-5 mb-10">
+    <div class="flex flex-row gap-7 md:gap-10 md:h-64 md:mt-5 mb-10 md:mb-12 lg:mb-20">
       <div class="flex flex-col md:flex-col lg:flex-row md:gap-9 gap-3">
         <!--Producto 1-->
         <div
