Todas las ramas mergeadas y enlazadas

--- a/src/zenhoucolors.html
+++ b/src/zenhoucolors.html
@@ -221,10 +221,10 @@
           <h2 class="mb-3 md:mb-6 text-sm font-semibold text-blue-400 uppercase">Legal</h2>
           <ul class="">
             <li class="mb-2 md:mb-4">
-              <a href="#" class="hover:underline">Política de privacidad</a>
+              <a href="construccion.html" class="hover:underline">Política de privacidad</a>
             </li>
             <li>
-              <a href="#" class="hover:underline">Términos y Condiciones</a>
+              <a href="construccion.html" class="hover:underline">Términos y Condiciones</a>
             </li>
           </ul>
         </div>
